# FGWS

./: README.md  Stuff.txt
App/: App.slnx
App/App/: App.py  App.pyproj
App_For_Monitoring/: Monitor.py
FGWS/: .gitignore  CMakeLists.txt  PERF.md  README.md  about.md  output.txt
FGWS/Backends/: DLSS_FrameGen.cpp  FSR3_FrameGen.cpp  FSR3_FrameGen.hpp  XeSS_FrameGen.cpp  XeSS_FrameGen.hpp
FGWS/Imported/: BackendBase.hpp  CMakeLists.txt  DLSS_FrameGen.hpp  DeviceCaps.cpp  DeviceCaps.hpp  FSR3_FrameGen.hpp  FrameGenFactory.cpp  FrameGenFactory.hpp  FrameGenTypes.hpp  IFrameGenerator.hpp  Interpolate.hlsl  MotionVectors.hlsl  OcclusionMask.hlsl  ShaderPasses.cpp  ShaderPasses.hpp  Software_FrameGen.cpp  Software_FrameGen.hpp  VendorBackends.cpp  XeSS_FrameGen.hpp
FGWS/Shaders/: Interpolate.hlsl  MotionVectors.hlsl  OcclusionMask.hlsl
FGWS/Tests/: FrameGenTests.cpp
FGWS/cmake/: FindNGX.cmake  FindXeSS.cmake
FGWS/include/: DeviceCaps.hpp  FrameGen.hpp  InterpolationPass.hpp  MotionVectorPass.hpp  OcclusionMaskPass.hpp  PresentationQueue.hpp  SoftwareInterpolationPipeline.hpp
FGWS/src/: DeviceCaps.cpp  FrameGen.cpp  InterpolationPass.cpp  MotionVectorPass.cpp  OcclusionMaskPass.cpp  PresentationQueue.cpp  SoftwareInterpolationPipeline.cpp
FGWS/src/Backends/: DLSS_FrameGen.hpp  FSR3_FrameGen.hpp  Software_FrameGen.cpp  Software_FrameGen.hpp
GPUCache/: index
GameEngine/Aether/: CMakeLists.txt  README.md  imgui.ini  output.txt  scene.json
GameEngine/Aether/Assets/Scripts/: move.lua  snake.lua
GameEngine/Aether/Engine/: CMakeLists.txt
GameEngine/Aether/Engine/include/: Aether.h
GameEngine/Aether/Engine/include/Core/: Application.h  Window.h
GameEngine/Aether/Engine/include/ECS/: Entity.h  Prefab.h  Scene.h
GameEngine/Aether/Engine/include/ECS/Components/: MaterialComponent.h  PointLightComponent.h  ScriptComponent.h
GameEngine/Aether/Engine/include/Editor/: ImGuiLayer.h  ImGuiLayout.h  ViewportPanel.h
GameEngine/Aether/Engine/include/Rendering/: Camera.h  Framebuffer.h  IndexBuffer.h  Lights.h  Material.h  Renderer.h  Shader.h  ShadowMap.h  VertexArray.h  VertexBuffer.h
GameEngine/Aether/Engine/include/Scripting/: ScriptEngine.h  ScriptRegistry.h
GameEngine/Aether/Engine/include/Serialization/: SceneSerializer.h
GameEngine/Aether/Engine/include/ge2/: Namespace.h  ge2.h
GameEngine/Aether/Engine/include/ge2/Core/: Application.h  Window.h
GameEngine/Aether/Engine/include/ge2/ECS/: Entity.h  Prefab.h  Scene.h
GameEngine/Aether/Engine/include/ge2/ECS/Components/: MaterialComponent.h  PointLightComponent.h  ScriptComponent.h
GameEngine/Aether/Engine/include/ge2/Editor/: ImGuiLayer.h  ImGuiLayout.h  ViewportPanel.h
GameEngine/Aether/Engine/include/ge2/Rendering/: Camera.h  Framebuffer.h  IndexBuffer.h  Lights.h  Material.h  Renderer.h  Shader.h  ShadowMap.h  VertexArray.h  VertexBuffer.h
GameEngine/Aether/Engine/include/ge2/Scripting/: ScriptEngine.h  ScriptRegistry.h
GameEngine/Aether/Engine/include/ge2/Serialization/: SceneSerializer.h
GameEngine/Aether/Engine/src/: Aether.cpp
GameEngine/Aether/Engine/src/Core/: Application.cpp  Window.cpp
GameEngine/Aether/Engine/src/ECS/: Entity.cpp  Prefab.cpp  Scene.cpp
GameEngine/Aether/Engine/src/ECS/Components/: ScriptComponent.cpp
GameEngine/Aether/Engine/src/Editor/: EditorState.h  ImGuiLayer.cpp  ImGuiLayout.cpp  ViewportPanel.cpp
GameEngine/Aether/Engine/src/Rendering/: Camera.cpp  Framebuffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShadowMap.cpp  VertexArray.cpp  VertexBuffer.cpp
GameEngine/Aether/Engine/src/Scripting/: ScriptEngine.cpp  ScriptRegistry.cpp
GameEngine/Aether/Engine/src/Serialization/: SceneSerializer.cpp
GameEngine/Aether/Sandbox/: CMakeLists.txt
GameEngine/Aether/Sandbox/src/: main.cpp
GameEngine/Aether/cmake/: PostBuildCopy.cmake
GameEngine/Aether/exe/: imgui.ini  scene.json
GameEngine/GE2/: CMakeLists.txt  output.txt
GameEngine/GE2/Engine/include/ge2/: ge2.h
GameEngine/GE2/Engine/include/ge2/Core/: Application.h  Input.h  Log.h  Window.h
GameEngine/GE2/Engine/include/ge2/Rendering/: Camera.h  Framebuffer.h  Renderer.h  Shader.h
GameEngine/GE2/Engine/src/Core/: Application.cpp  Input.cpp  Log.cpp  Window.cpp
GameEngine/GE2/Engine/src/Rendering/: Camera.cpp  Framebuffer.cpp  Renderer.cpp  Shader.cpp
NeonRacer/: NeonRacer.html
SnakeGame/: Snake.py
Survival/: Survival.py  overkill_save.txt
TicTacToe/: TicTacToe.py
